# djangoapp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: django.yml
core/: asgi.py  logs.py  settings.py  urls.py  wsgi.py
polls/: admin.py  form.py  models.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_alter_polls_deleted_at_alter_responses_deleted_at_and_more.py
polls/templates/: base.html  form.html  header.html  index.html  sm-modal.html
templates/account/: login.html  signup.html
templates/allauth/elements/: button.html  errors.html  field.html  fields.html
templates/allauth/layouts/: base.html
