[tool.poetry]
name = "djangoapp"
version = "0.1.0"
description = ""
authors = ["Daniel Anugerah <danielangrh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
python-dotenv = "^1.0.1"
django-stubs = { extras = ["compatible-mypy"], version = "^4.2.7" }
django-allauth = "^0.61.1"
django-widget-tweaks = "^1.5.0"
django-template-partials = "^23.4"
djlint = "^1.34.1"
json-log-formatter = "^1.0"
granian = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
[tool.django-stubs]
django_settings_module = "core.settings"
